fix a link in 2025-08-17-news.md

--- a/_posts/2025-08-17-news.md
+++ b/_posts/2025-08-17-news.md
@@ -49,7 +49,7 @@ The most useful egtool command is load which currently supports RPi Pico 2, Teen
 
 #### Pi Pico 2
 
-We gained [support for the wonderfull Raspberry Pi RP2350](https://github.com/embedde) microcontroller. Its both ARM cores will provide power to your goroutines. The number of supported peripherals is still modest (DMA, GPIO, IOMUX, SPI, UART) but this MCU will definitely be our workhorse due to its availability and features, so expect more in the near future.
+We gained [support for the wonderfull Raspberry Pi RP2350](https://github.com/embeddedgo/pico) microcontroller. Its both ARM cores will provide power to your goroutines. The number of supported peripherals is still modest (DMA, GPIO, IOMUX, SPI, UART) but this MCU will definitely be our workhorse due to its availability and features, so expect more in the near future.
 
 #### Nintendo 64
 
